<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.packet.ocx_android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.packet.ocx_android.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_detailVehicle"
            app:destination="@id/detailVehicle" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.packet.ocx_android.ui.notifications.NotificationsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/detailVehicle"
        android:name="com.packet.ocx_android.ui.vehicle.DetailVehicle"
        android:label="fragment_detail_vehicle"
        tools:layout="@layout/fragment_detail_vehicle" />
    <activity
        android:id="@+id/logInActivity"
        android:name="com.packet.ocx_android.LogInActivity"
        android:label="activity_log_in"
        tools:layout="@layout/activity_log_in" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.packet.ocx_android.MainActivity"
        android:label="MainActivity" />
</navigation>