<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/background"
    tools:context=".ui.travel.ListTravel">

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:background="@color/dark_orange"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" >

        <RadioButton
            android:id="@+id/radioButton_all"
            android:checked="true"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:text="@string/travel_rb_all" />

        <RadioButton
            android:id="@+id/radioButton_personnal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/travel_type_personnal" />

        <RadioButton
            android:id="@+id/radioButton_business"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/travel_type_business" />
    </RadioGroup>


    <ListView
        android:id="@+id/list_travels"
        android:layout_width="0dp"
        android:layout_marginTop="60dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>